# libepubgen

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  libepubgen.pc.in
debian/: changelog  control  rules  watch
debian/tests/: control  unit
debian/tests/patches/: system-epubgen.diff
docs/: Makefile.in
docs/doxygen/: Makefile.in  doxygen.cfg
inc/: Makefile.am  Makefile.in
inc/libepubgen/: EPUBDrawingGenerator.h  EPUBPackage.h  EPUBPresentationGenerator.h  EPUBTextGenerator.h  Makefile.am  Makefile.in  libepubgen-api.h  libepubgen-decls.h  libepubgen.h
src/: Makefile.am  Makefile.in
src/lib/: EPUBBinaryContent.cpp  EPUBBinaryContent.h  EPUBBodyStyleManager.cpp  EPUBBodyStyleManager.h  EPUBCSSContent.cpp  EPUBCSSContent.h  EPUBCSSProperties.cpp  EPUBCSSProperties.h  EPUBCounter.cpp  EPUBCounter.h  EPUBDrawingGenerator.cpp  EPUBFontManager.cpp  EPUBFontManager.h  EPUBGenerator.cpp  EPUBGenerator.h  EPUBHTMLGenerator.cpp  EPUBHTMLGenerator.h  EPUBHTMLManager.cpp  EPUBHTMLManager.h  EPUBImageManager.cpp  EPUBImageManager.h  EPUBListStyleManager.cpp  EPUBListStyleManager.h  EPUBManifest.cpp  EPUBManifest.h  EPUBPagedGenerator.cpp  EPUBPagedGenerator.h  EPUBParagraphStyleManager.cpp  EPUBParagraphStyleManager.h  EPUBPath.cpp  EPUBPath.h  EPUBPresentationGenerator.cpp  EPUBSpanStyleManager.cpp  EPUBSpanStyleManager.h  EPUBSplitGuard.cpp  EPUBSplitGuard.h  EPUBTableStyleManager.cpp  EPUBTableStyleManager.h  EPUBTextElements.cpp  EPUBTextElements.h  (+9 more)
src/test/: EPUBPathTest.cpp  EPUBTextGeneratorTest.cpp  Makefile.am  Makefile.in  test.cpp
