## -*- Mode: make; tab-width: 4; indent-tabs-mode: tabs -*-

libepubgendir = $(includedir)/libepubgen-@EPUBGEN_MAJOR_VERSION@.@EPUBGEN_MINOR_VERSION@/libepubgen

dist_libepubgen_HEADERS = \
	libepubgen.h \
	libepubgen-api.h \
	libepubgen-decls.h \
	EPUBDrawingGenerator.h \
	EPUBPackage.h \
	EPUBPresentationGenerator.h \
	EPUBTextGenerator.h

## vim:set shiftwidth=4 tabstop=4 noexpandtab:
